add porjects service
