# api/src/controllers/user.controller.ts
@@ -1,12 +1,14 @@
 import { JsonController, Get, Post, Body, Authorize, Put } from 'kiwi-server';
 import { UserIn, LoginIn, ForgotPasswordIn, ResetPasswordIn } from '../models/user.model';
 import { AuthService } from '../services/auth.service';
+import { UserService } from '../services/user.service';
+import { ProjectService } from '../services/project.service';
 
 @JsonController('/user')
 export class UserController {
 
 
-	constructor(private authService: AuthService) { }
+	constructor(private authService: AuthService, private projectService: ProjectService) { }
 
 	@Post('/login')
 	public post(@Body() body: LoginIn) {
@@ -31,6 +33,12 @@ export class UserController {
 	@Get('/logout')
 	public logout() {
 		// TODO: not sure if we need it
+	}
+
+	@Authorize()
+	@Get('/projects')
+	public projects(request: any){
+		this.projectService.list(request.projects);
 	}
 
 	@Post('/forgot-password')
